added tests for syntax sugar

--- a/notebooks/Horgan Example.ipynb
+++ b/notebooks/Horgan Example.ipynb
@@ -121,6 +121,88 @@
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "id  minor\n",
+       "0   RAW                                     ([2109.2], 4229.0)\n",
+       "    REF1       ([2540.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "    REF2       ([2540.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "    QA       ([512.6, 518.4, 524.7, 530.4, 536.5, 542.8, 54...\n",
+       "    RAD        ([2540.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "1   RAW                                     ([2109.2], 4229.0)\n",
+       "    REF1       ([2548.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "    REF2       ([2548.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "    QA       ([512.6, 518.4, 524.7, 530.4, 536.5, 542.8, 54...\n",
+       "    RAD        ([2548.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "2   RAW                                     ([2109.2], 4228.0)\n",
+       "    REF1       ([2548.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "    REF2       ([2548.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "    QA       ([512.6, 518.4, 524.7, 530.4, 536.5, 542.8, 54...\n",
+       "    RAD        ([2548.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "3   RAW                                     ([2109.2], 4230.0)\n",
+       "    REF1               ([2540.0, 2556.0, 2572.0, 2587.9], 0.0)\n",
+       "    REF2               ([2540.0, 2556.0, 2572.0, 2587.9], 0.0)\n",
+       "    QA       ([512.6, 518.4, 524.7, 530.4, 536.5, 542.8, 54...\n",
+       "    RAD                ([2540.0, 2556.0, 2572.0, 2587.9], 0.0)\n",
+       "4   RAW                                     ([2109.2], 4258.0)\n",
+       "    REF1     ([2540.0, 2548.0, 2556.0, 2564.0, 2572.0, 2587...\n",
+       "    REF2     ([2540.0, 2548.0, 2556.0, 2564.0, 2572.0, 2587...\n",
+       "    QA       ([512.6, 518.4, 524.7, 530.4, 536.5, 542.8, 54...\n",
+       "    RAD      ([2540.0, 2548.0, 2556.0, 2564.0, 2572.0, 2587...\n",
+       "5   RAW                                     ([2109.2], 4217.0)\n",
+       "    REF1     ([2540.0, 2548.0, 2556.0, 2564.0, 2572.0, 2579...\n",
+       "    REF2     ([2540.0, 2548.0, 2556.0, 2564.0, 2572.0, 2579...\n",
+       "    QA       ([512.6, 518.4, 524.7, 530.4, 536.5, 542.8, 54...\n",
+       "    RAD      ([2540.0, 2548.0, 2556.0, 2564.0, 2572.0, 2579...\n",
+       "                                   ...                        \n",
+       "32  RAW                                     ([2109.2], 4255.0)\n",
+       "    REF1       ([2548.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "    REF2       ([2548.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "    QA       ([512.6, 518.4, 524.7, 530.4, 536.5, 542.8, 54...\n",
+       "    RAD        ([2548.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "33  RAW                                     ([2109.2], 4259.0)\n",
+       "    REF1               ([2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "    REF2               ([2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "    QA       ([512.6, 518.4, 524.7, 530.4, 536.5, 542.8, 54...\n",
+       "    RAD                ([2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "34  RAW                                     ([2109.2], 4263.0)\n",
+       "    REF1       ([2540.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "    REF2       ([2540.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "    QA       ([512.6, 518.4, 524.7, 530.4, 536.5, 542.8, 54...\n",
+       "    RAD        ([2540.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "35  RAW                                     ([2109.2], 4255.0)\n",
+       "    REF1       ([2540.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "    REF2       ([2540.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "    QA       ([512.6, 518.4, 524.7, 530.4, 536.5, 542.8, 54...\n",
+       "    RAD        ([2540.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "36  RAW                                     ([2109.2], 4279.0)\n",
+       "    REF1               ([2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "    REF2               ([2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "    QA       ([512.6, 518.4, 524.7, 530.4, 536.5, 542.8, 54...\n",
+       "    RAD                ([2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "37  RAW                                     ([2109.2], 4250.0)\n",
+       "    REF1       ([2540.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "    REF2       ([2540.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "    QA       ([512.6, 518.4, 524.7, 530.4, 536.5, 542.8, 54...\n",
+       "    RAD        ([2540.0, 2556.0, 2564.0, 2572.0, 2587.9], 0.0)\n",
+       "Length: 190, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run_analytics(spectra, band_center)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -1901,88 +1983,6 @@
        "[269 rows x 190 columns]"
       ]
      },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "run_analytics(spectra, band_center)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "id  minor\n",
-       "0   RAW                Float64Index([2109.2], dtype='float64')\n",
-       "    REF1     Float64Index([2540.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "    REF2     Float64Index([2540.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "    QA       Float64Index([ 512.6,  518.4,  524.7,  530.4, ...\n",
-       "    RAD      Float64Index([2540.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "1   RAW                Float64Index([2109.2], dtype='float64')\n",
-       "    REF1     Float64Index([2548.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "    REF2     Float64Index([2548.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "    QA       Float64Index([ 512.6,  518.4,  524.7,  530.4, ...\n",
-       "    RAD      Float64Index([2548.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "2   RAW                Float64Index([2109.2], dtype='float64')\n",
-       "    REF1     Float64Index([2548.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "    REF2     Float64Index([2548.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "    QA       Float64Index([ 512.6,  518.4,  524.7,  530.4, ...\n",
-       "    RAD      Float64Index([2548.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "3   RAW                Float64Index([2109.2], dtype='float64')\n",
-       "    REF1     Float64Index([2540.0, 2556.0, 2572.0, 2587.9],...\n",
-       "    REF2     Float64Index([2540.0, 2556.0, 2572.0, 2587.9],...\n",
-       "    QA       Float64Index([ 512.6,  518.4,  524.7,  530.4, ...\n",
-       "    RAD      Float64Index([2540.0, 2556.0, 2572.0, 2587.9],...\n",
-       "4   RAW                Float64Index([2109.2], dtype='float64')\n",
-       "    REF1     Float64Index([2540.0, 2548.0, 2556.0, 2564.0, ...\n",
-       "    REF2     Float64Index([2540.0, 2548.0, 2556.0, 2564.0, ...\n",
-       "    QA       Float64Index([ 512.6,  518.4,  524.7,  530.4, ...\n",
-       "    RAD      Float64Index([2540.0, 2548.0, 2556.0, 2564.0, ...\n",
-       "5   RAW                Float64Index([2109.2], dtype='float64')\n",
-       "    REF1     Float64Index([2540.0, 2548.0, 2556.0, 2564.0, ...\n",
-       "    REF2     Float64Index([2540.0, 2548.0, 2556.0, 2564.0, ...\n",
-       "    QA       Float64Index([ 512.6,  518.4,  524.7,  530.4, ...\n",
-       "    RAD      Float64Index([2540.0, 2548.0, 2556.0, 2564.0, ...\n",
-       "                                   ...                        \n",
-       "32  RAW                Float64Index([2109.2], dtype='float64')\n",
-       "    REF1     Float64Index([2548.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "    REF2     Float64Index([2548.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "    QA       Float64Index([ 512.6,  518.4,  524.7,  530.4, ...\n",
-       "    RAD      Float64Index([2548.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "33  RAW                Float64Index([2109.2], dtype='float64')\n",
-       "    REF1     Float64Index([2556.0, 2564.0, 2572.0, 2587.9],...\n",
-       "    REF2     Float64Index([2556.0, 2564.0, 2572.0, 2587.9],...\n",
-       "    QA       Float64Index([ 512.6,  518.4,  524.7,  530.4, ...\n",
-       "    RAD      Float64Index([2556.0, 2564.0, 2572.0, 2587.9],...\n",
-       "34  RAW                Float64Index([2109.2], dtype='float64')\n",
-       "    REF1     Float64Index([2540.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "    REF2     Float64Index([2540.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "    QA       Float64Index([ 512.6,  518.4,  524.7,  530.4, ...\n",
-       "    RAD      Float64Index([2540.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "35  RAW                Float64Index([2109.2], dtype='float64')\n",
-       "    REF1     Float64Index([2540.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "    REF2     Float64Index([2540.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "    QA       Float64Index([ 512.6,  518.4,  524.7,  530.4, ...\n",
-       "    RAD      Float64Index([2540.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "36  RAW                Float64Index([2109.2], dtype='float64')\n",
-       "    REF1     Float64Index([2556.0, 2564.0, 2572.0, 2587.9],...\n",
-       "    REF2     Float64Index([2556.0, 2564.0, 2572.0, 2587.9],...\n",
-       "    QA       Float64Index([ 512.6,  518.4,  524.7,  530.4, ...\n",
-       "    RAD      Float64Index([2556.0, 2564.0, 2572.0, 2587.9],...\n",
-       "37  RAW                Float64Index([2109.2], dtype='float64')\n",
-       "    REF1     Float64Index([2540.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "    REF2     Float64Index([2540.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "    QA       Float64Index([ 512.6,  518.4,  524.7,  530.4, ...\n",
-       "    RAD      Float64Index([2540.0, 2556.0, 2564.0, 2572.0, ...\n",
-       "Length: 190, dtype: object"
-      ]
-     },
      "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
@@ -2192,7 +2192,8 @@
     {
      "data": {
       "text/plain": [
-       "(Float64Index([2540.0, 2556.0, 2564.0, 2572.0, 2587.9], dtype='float64'),\n",
+       "((Float64Index([2540.0, 2556.0, 2564.0, 2572.0, 2587.9], dtype='float64'),\n",
+       "  0.0),\n",
        " 512.6     0.073273\n",
        " 518.4     0.072823\n",
        " 524.7     0.072404\n",
